Fixed some strings in the Danish translation.
2004-05-28  Ole Laursen  <olau@hardworking.dk>

	* da.po: Fixed some strings in the Danish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-28  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Fixed some strings in the Danish translation.
+
 2004-05-25  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
