--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-29  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "tk" to ALL_LINGUAS.
+
 2004-05-27  Alexander Larsson  <alexl@redhat.com>
 
 	Patch from Jamie <jamiemcc@blueyonder.co.uk>
