--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-29  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "tk" to ALL_LINGUAS.
+
 2004-05-24  Martin Wehner  <martin.wehner@epost.de>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c
