--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-31  Alexander Shopov  <ash@contact.bg>
+	* bg.po: Updated Bulgarian translation by
+	Vladimir Petkov <vpetkov@i-space.org>
+
 2004-05-29  Christian Rose  <menthos@menthos.com>
 
 	* tk.po: Added Turkmen translation by
