--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,14 @@
-This is nautilus 2.6.2, the file manager for the Gnome 2 desktop.
+This is nautilus 2.7.1, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.6.2 are:
+* Desktop file editior property page
+* Display server name in window title for remote URIs
+* Add setting to not show volumes on desktop
+* Prevents read-only emblem from being shown on desktop icons
+  when user is in root group
+* Fix dnd start coordinates when zoomed
+* Start apps in the directory they are launched from
+* Add close all windows to spatial window menu  
 
 Major changes since 2.6.1 are:
 * Accessibility/keynav/theming fixes
