--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-01  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for 2.7.1
+
 2004-05-29  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "tk" to ALL_LINGUAS.
