--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-06-01  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.7.1 ===
+
+2004-06-01  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for 2.7.1
 
