--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.7.1 ===
+
 2004-05-31  Alexander Shopov  <ash@contact.bg>
 	* bg.po: Updated Bulgarian translation by
 	Vladimir Petkov <vpetkov@i-space.org>
