--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-01  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 === nautilus 2.7.1 ===
 
 2004-05-31  Alexander Shopov  <ash@contact.bg>
