--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-01  Dave Camp  <dave@novell.com>
+
+	* src/nautilus-window-manage-views.c: (open_location): If
+	always_use_browser is set and the window is a spatial window,
+	create a new browser window.
+
 2004-05-29  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "tk" to ALL_LINGUAS.
