If always_use_browser is set and the window is a spatial window, create a
2004-06-01  Dave Camp  <dave@novell.com>

	* src/nautilus-window-manage-views.c: (open_location): If
	always_use_browser is set and the window is a spatial window,
	create a new browser window.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-01  Dave Camp  <dave@novell.com>
+
+	* src/nautilus-window-manage-views.c: (open_location): If
+	always_use_browser is set and the window is a spatial window,
+	create a new browser window.
+
 2004-06-01  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus/nautilus-view-component.idl:
