Add an "always open in browser windows" option to the prefs dialog. Please
2004-06-01  Dave Camp  <dave@novell.com>

	* src/nautilus-file-management-properties.c:
	(nautilus_file_management_properties_dialog_setup):
	* src/nautilus-file-management-properties.glade: Add an
	"always open in browser windows" option to the prefs dialog.
	Please stop yelling at me.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-06-01  Dave Camp  <dave@novell.com>
 
+	* src/nautilus-file-management-properties.c:
+	(nautilus_file_management_properties_dialog_setup):
+	* src/nautilus-file-management-properties.glade: Add an 
+	"always open in browser windows" option to the prefs dialog.
+	Please stop yelling at me.
+	
+2004-06-01  Dave Camp  <dave@novell.com>
+
 	* src/nautilus-window-manage-views.c: (open_location): If
 	always_use_browser is set and the window is a spatial window,
 	create a new browser window.
