--- a/po/ca.po
+++ b/po/ca.po
@@ -4432,7 +4432,7 @@ msgstr "per _nom"
 #: src/file-manager/fm-icon-view.c:160
 #: src/file-manager/nautilus-icon-view-ui.xml.h:13
 msgid "Keep icons sorted by name in rows"
-msgstr "Mantingues les icones ordenades per nom en files"
+msgstr "Manté les icones ordenades per nom en files"
 
 #: src/file-manager/fm-icon-view.c:166
 msgid "by _Size"
@@ -4441,7 +4441,7 @@ msgstr "per _mida"
 #: src/file-manager/fm-icon-view.c:167
 #: src/file-manager/nautilus-icon-view-ui.xml.h:14
 msgid "Keep icons sorted by size in rows"
-msgstr "Mantingues les icones ordenades per mida en files"
+msgstr "Manté les icones ordenades per mida en files"
 
 #: src/file-manager/fm-icon-view.c:173
 msgid "by _Type"
@@ -4459,7 +4459,7 @@ msgstr "per _data de modificació"
 #: src/file-manager/fm-icon-view.c:181
 #: src/file-manager/nautilus-icon-view-ui.xml.h:12
 msgid "Keep icons sorted by modification date in rows"
-msgstr "Mantingues les icones ordenades per data de modificació en files"
+msgstr "Manté les icones ordenades per data de modificació en files"
 
 #: src/file-manager/fm-icon-view.c:187
 msgid "by _Emblems"
@@ -4468,7 +4468,7 @@ msgstr "per _distintius"
 #: src/file-manager/fm-icon-view.c:188
 #: src/file-manager/nautilus-icon-view-ui.xml.h:11
 msgid "Keep icons sorted by emblems in rows"
-msgstr "Mantingues les icones ordenades per distintius en files"
+msgstr "Manté les icones ordenades per distintius en files"
 
 #: src/file-manager/fm-icon-view.c:1652
 #: src/file-manager/nautilus-icon-view-ui.xml.h:20
@@ -5033,7 +5033,7 @@ msgstr "Visualitza o modifica les propietats de cada element seleccionat"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:51
 msgid "_Empty File"
-msgstr "Buida el fitx_er"
+msgstr "Fitx_er buit"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:53
 msgid "_Format"
@@ -5109,7 +5109,7 @@ msgstr "Mostra les icones en l'ordre oposat"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:10
 msgid "Keep icons lined up on a grid"
-msgstr "Mantingues les icones alineades en una graella"
+msgstr "Manté les icones alineades en una graella"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:16
 msgid "Leave icons wherever they are dropped"
@@ -5137,11 +5137,11 @@ msgstr "_Estira la icona"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:23
 msgid "Toggle using a tighter layout scheme"
-msgstr "Commuta utilitzant un esquema de format ajustat"
+msgstr "Commuta la utilització d'un esquema de format ajustat"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:24
 msgid "_Keep Aligned"
-msgstr "_Mantingues alineat"
+msgstr "_Manté alineat"
 
 #: src/file-manager/nautilus-icon-view-ui.xml.h:25
 msgid "_Manually"
