--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-04  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-06-04  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
