Updated Albanian translation
* sq.po: Updated Albanian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-05  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2004-06-04  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
@@ -144,11 +148,11 @@
 
 === nautilus 2.6.1 ===
 
-2004-04-19  ?Ωygimantas Beru?çka  <uid0@akl.lt>
+2004-04-19  ?ygimantas Beru?ka  <uid0@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
 
-2004-04-16  I?±aki Larra?±aga  <dooteo@euskalgnu.org>
+2004-04-16  I?aki Larra?aga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translatiion.
 
@@ -160,13 +164,13 @@
 
 	* en_GB.po: Updated British English translation
 
-2004-04-11  ?Ωygimantas Beru?çka  <uid0@akl.lt>
+2004-04-11  ?ygimantas Beru?ka  <uid0@akl.lt>
 
-	* lt.po: Updated Lithuanian translation by Mantas Kriau?çi?´nas.
+	* lt.po: Updated Lithuanian translation by Mantas Kriau?i?nas.
 
 2004-04-11  John C Barstow  <jbowtie@amathaine.com>
 
-	* mi.po: Updated M?Åori translation.
+	* mi.po: Updated M?ori translation.
 
 2004-04-09  Adam Weinberger  <adamw@gnome.org>
 
@@ -189,10 +193,10 @@
 
 	* fr.po: Updated French translation.
 
-2004-04-03  Sam?∫el J?≥n Gunnarsson  <sammi@techattack.nu>
+2004-04-03  Sam?el J?n Gunnarsson  <sammi@techattack.nu>
 
 	* is.po: Updated Icelandic translation by 
-	Helgi ?ûormar ?ûorbj?∂rnsson  <helgi@trance.is>
+	Helgi ?ormar ?orbj?rnsson  <helgi@trance.is>
 
 2004-04-02  Gareth Owen  <gowen72@yahoo.com>
 
@@ -244,7 +248,7 @@
 
 	* el.po: Updated  Greek translation.
 
-2004-03-23  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2004-03-23  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -384,7 +388,7 @@
 
 	* mn.po: Updated Mongolian translation.
 
-2004-03-09  Danilo ?†egan  <dsegan@gmx.net>
+2004-03-09  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Fixed typos noticed by Bojan Suzi??
 
@@ -396,7 +400,7 @@
 
 	* ga.po: Updated Irish translation.
 
-2004-03-08  Danilo ?†egan  <dsegan@gmx.net>
+2004-03-08  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr@ije.po: Added Serbian Jekavian translation by Bojan Suzi??
 	<bojans@teol.net>.
@@ -416,7 +420,7 @@
 
 	* fi.po: Improve Finnish translation.
 
-2004-03-06  M?ôtin ?èmirov  <metin@karegen.com>
+2004-03-06  M?tin ?mirov  <metin@karegen.com>
 
 	* az.po: Translation updated.
 
@@ -525,7 +529,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2004-02-25  Danilo ?†egan  <dsegan@gmx.net>
+2004-02-25  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -575,7 +579,7 @@
 
 	* cs.po: Updated Czech translation.
 
-2004-02-24  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2004-02-24  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian nynorsk translation.
 
@@ -607,7 +611,7 @@
 
 	* da.po: Updated Danish translation.
 
-2004-02-23  Danilo ?†egan  <dsegan@gmx.net>
+2004-02-23  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Fix accelerator clash and a typo.
 	
@@ -623,11 +627,11 @@
 
 	* el.po: Updated Greek translation.
 
-2004-02-22  M?ôtin ?èmirov  <metin@karegen.com>
+2004-02-22  M?tin ?mirov  <metin@karegen.com>
 
 	* az.po: Updated Azerbaijani translation.
 
-2004-02-22  Danilo ?†egan  <dsegan@gmx.net>
+2004-02-22  Danilo ?egan  <dsegan@gmx.net>
 
 	* srr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -709,7 +713,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2004-02-15  M?ôtin ?èmirov  <metin@karegen.com>
+2004-02-15  M?tin ?mirov  <metin@karegen.com>
 
 	* az.po: Translation updated.
 
@@ -729,7 +733,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2004-02-12  Danilo ?†egan  <dsegan@gmx.net>
+2004-02-12  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -820,11 +824,11 @@
 
 	* da.po: Updated Danish translation.
 
-2004-02-01  Danilo ?†egan  <dsegan@gmx.net>
+2004-02-01  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
-2004-01-31 M?ôtin ?èmirov <metin@karegen.com>
+2004-01-31 M?tin ?mirov <metin@karegen.com>
 
 	* az.po: Updated Azerbaijani translation.
 
@@ -863,7 +867,7 @@
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
 
-2004-01-27  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2004-01-27  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -899,7 +903,7 @@
 
 	* cs.po: Updated Czech translation.
 
-2004-01-23  Danilo ?†egan  <dsegan@gmx.net>
+2004-01-23  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -930,7 +934,7 @@
 
 2004-01-20  Dafydd Harries  <daf@muse.19inch.net>
 
-	* cy.po: Fixes, notably s/symyd/symud/; s/copio/cop?Øo/.
+	* cy.po: Fixes, notably s/symyd/symud/; s/copio/cop?o/.
 
 2004-01-18 Hasbullah Bin Pit <sebol@my-penguin.org>
 
@@ -940,10 +944,10 @@
 
 	* no.po: Updated Norwegian translation.
 
-2004-01-17  ?Ωygimantas Beru?çka  <uid0@tuxfamily.org>
+2004-01-17  ?ygimantas Beru?ka  <uid0@tuxfamily.org>
 
 	* lt.po: Updated Lithuanian translation by Mantas
-	Kriau?çi?´nas.
+	Kriau?i?nas.
 
 2004-01-17  Christophe Merlet  <redfox@redfoxcenter.org>
 
@@ -994,13 +998,13 @@
 
 	* nl.po: Translation updated by Reinout van Schouwen.
 
-2004-01-13  Danilo ?†egan  <dsegan@gmx.net>
+2004-01-13  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
 === nautilus 2.5.5 ===
 
-2004-01-13  Danilo ?†egan  <dsegan@gmx.net>
+2004-01-13  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1034,7 +1038,7 @@
 
 	* ko.po: Updated Korean translation.
 
-2004-01-10  Danilo ?†egan  <dsegan@gmx.net>
+2004-01-10  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1067,7 +1071,7 @@
 
 	* cs.po: Updated Czech translation.
 
-2004-01-05  Danilo ?†egan  <dsegan@gmx.net>
+2004-01-05  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1093,13 +1097,13 @@
 
 	* da.po: Partial update of Danish translation.
 
-2004-01-01  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2004-01-01  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
 === nautilus 2.5.4 ===
 
-2003-12-29  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2003-12-29  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -1107,11 +1111,11 @@
 
 	* ms.po: Updated Malay translation. 
 
-2003-12-27  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2003-12-27  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
-2003-12-23  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2003-12-23  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -1128,11 +1132,11 @@
 
 	* ja.po: Updated Japanese translation.
 
-2003-12-17  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2003-12-17  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
-2003-12-16  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2003-12-16  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
 
@@ -1160,7 +1164,7 @@
 
 	* es.po: Updated Spanish translation.
 
-2003-12-14  Danilo ?†egan  <dsegan@gmx.net>
+2003-12-14  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1176,10 +1180,10 @@
 
 	* es.po: Updated Spanish translation
 
-2003-12-10  ?Ösmund Skj?¶veland  <aasmunds@fys.uio.no>
+2003-12-10  ?smund Skj?veland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
-	* no.po: Corrected some errors in Norwegian Bokm?•l translation.
+	* no.po: Corrected some errors in Norwegian Bokm?l translation.
 
 2003-12-09   Vincent van Adrighem  <adrighem@gnome.org>
 
@@ -1207,7 +1211,7 @@
 
 	* mn.po: Updated Mongolian translation. 
 
-2003-12-03  Danilo ?†egan  <dsegan@gmx.net>
+2003-12-03  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1215,7 +1219,7 @@
 
 	* no.po: Update Norwegian translation.
 
-2003-11-27  Danilo ?†egan  <dsegan@gmx.net>
+2003-11-27  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbain translation.
 
@@ -1230,7 +1234,7 @@
 
 	* POTFILES.in: add fm-icon-container.c
 
-2003-11-20  Danilo ?†egan  <dsegan@gmx.net>
+2003-11-20  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1244,7 +1248,7 @@
 
 	* da.po: Updated Danish translation.
 
-2003-11-10  Danilo ?†egan  <dsegan@gmx.net>
+2003-11-10  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1291,11 +1295,11 @@
 
 	* hu.po: Updated Hungarian translation.
 
-2003-10-17  Danilo ?†egan  <dsegan@gmx.net>
+2003-10-17  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
-2003-10-15  Danilo ?†egan  <dsegan@gmx.net>
+2003-10-15  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1306,7 +1310,7 @@
 
 	* hu.po: Updated Hungarian translation.
 
-2003-10-08  Danilo ?†egan  <dsegan@gmx.net>
+2003-10-08  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1318,11 +1322,11 @@
 
 	* ro.po: Updated Romanian translation
 
-2003-10-06  Danilo ?†egan  <dsegan@gmx.net>
+2003-10-06  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
-2003-10-06  Danilo ?†egan  <dsegan@gmx.net>
+2003-10-06  Danilo ?egan  <dsegan@gmx.net>
 
 	* POTFILES.in: Added new files, removed nonexisting file.
 
@@ -1352,7 +1356,7 @@
 
 	* pl.po: Updated Polish translation.
 
-2003-09-10  Danilo ?†egan  <dsegan@gmx.net>
+2003-09-10  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1467,7 +1471,7 @@
 
 	* ko.po: Updated Korean translation.
 
-2003-08-23  Danilo ?†egan  <dsegan@gmx.net>
+2003-08-23  Danilo ?egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
@@ -1475,7 +1479,7 @@
 
 	* nl.po: Dutch translation updated by Reinout van Schouwen.
 
-2003-08-20  Sam?∫el J?≥n Gunnarsson  <sammi@techattack.nu>
+2003-08-20  Sam?el J?n Gunnarsson  <sammi@techattack.nu>
 
 	* is.po: Updated Icelandic translation
 	
@@ -1522,7 +1526,7 @@
 
 	* cy.po: Updated Welsh translation.
 
-2003-08-12  Danilo ?†egan  <dsegan@gmx.net>
+2003-08-12  Danilo ?egan  <dsegan@gmx.net>
 
 	* be.po: Updated Belarusian translation by Ales Nyakhaychyk
 	<nab@mail.by>. 
