--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-06  Nikos Charonitakis  <frolix68@yahoo.gr>
+
+	* el.po: Updated Greek translation.
+
 2004-06-04  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
