--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-06-07  Anders Carlsson  <andersca@gnome.org>
+
+	* libnautilus-private/nautilus-file-operations-progress.c:
+	(nautilus_file_operations_progress_destroy),
+	(time_remaining_callback),
+	(nautilus_file_operations_progress_new_file),
+	(nautilus_file_operations_progress_update_sizes):
+	Show estimated time remaining in the progress dialog.
+	
+	* src/nautilus-spatial-window.c:
+	(location_button_clicked_callback):
+	Select the current folder menu item.
+	
 2004-06-02  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-directory-view.c:
