--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-08  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-06-06  Nikos Charonitakis  <frolix68@yahoo.gr>
 
 	* el.po: Updated Greek translation.
