--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-10  John C Barstow  <jbowtie@amathaine.com>
+
+	* mi.po: Translation updated.
+
 2004-06-06  Nikos Charonitakis  <frolix68@yahoo.gr>
 
 	* el.po: Updated Greek translation.
