--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-14  Dave Camp  <dave@novell.com>
+
+	* NEWS: Updated for 2.6.3.
+
 2004-06-09  Dave Camp  <dave@novell.com>
 
 	* libnautilus-private/nautilus-file-operations.c:
