--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
-This is nautilus 2.6.2, the file manager for the Gnome 2 desktop.
+This is nautilus 2.6.3, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.6.2 are:
+
+* Improved drag and drop responsiveness
+* Set working directory of launched processes to current view directory
+* Zooming fix
+* Crash fixes
 
 Major changes since 2.6.1 are:
 * Accessibility/keynav/theming fixes
