--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-14  Dave Camp  <dave@novell.com>
+
+	* configure.in: Post-release version bump.
+
 === nautilus 2.6.3 ===
 
 2004-06-14  Dave Camp  <dave@novell.com>
