Updated Hungarian translation.
2004-06-18  Andras Timar  <timar@gnome.hu>

	* hu.po: Updated Hungarian translation.

--- a/po/hu.po
+++ b/po/hu.po
@@ -4358,8 +4358,8 @@ msgstr "Biztosan véglegesen törölni akarja a következőt: \"%s\"?"
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
 msgid_plural "Are you sure you want to permanently delete the %d selected items?"
-msgstr[0] "Biztosan véglegesen törölni akarja a(z) %d kijelölt elemet?"
-msgstr[1] "Biztosan véglegesen törölni akarja a(z) %d kijelölt elemet?"
+msgstr[0] "Biztosan véglegesen törölni akarja a kijelölt %d elemet?"
+msgstr[1] "Biztosan véglegesen törölni akarja a kijelölt %d elemet?"
 
 # src/file-manager/fm-directory-view.c:3191
 #: src/file-manager/fm-directory-view.c:905
