--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-18  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-06-17  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
