--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-24  Andras Timar  <timar@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-06-23  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
