--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-25  Nikos Charonitakis  <frolix68@yahoo.gr>
+
+	* el.po: Updated Greek translation.
+
 2004-06-24  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
