--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-25  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2004-06-25  Nikos Charonitakis  <frolix68@yahoo.gr>
 
 	* el.po: Updated Greek translation.
