--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-25  Sebastien Bacher  <seb128@debian.org>
+
+        * libnautilus-private/nautilus-icon-container.c:
+        (nautilus_icon_container_update_icon):
+        Removed debugging output for thumbnails of small images.
+        (Closes: #141078).
+
 2004-06-14  Dave Camp  <dave@novell.com>
 
 	* configure.in: Post-release version bump.
