--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-26  John C Barstow  <jbowtie@amathaine.com>
+
+	* mi.po: Translation updated.
+
 2004-06-18  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
