--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-28  Nikos Charonitakis  <charosn@her.forthnet.gr>
+
+	* el.po Updated Greek translation.
+
 2004-06-25  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English translation
