--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-28  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Translation updated.
+
 2004-06-28  Nikos Charonitakis  <charosn@her.forthnet.gr>
 
 	* el.po Updated Greek translation.
