--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-29  Ivan Stojmirov <stojmir@linux.net.mk>
+
+	* mk.po: Updated Macedonian translation.
+
 2004-06-29  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
