--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-29  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.skip: Removed nonexisting files.
+	* sv.po: Updated Swedish translation.
+
 2004-06-29  Ivan Stojmirov <stojmir@linux.net.mk>
 
 	* mk.po: Updated Macedonian translation.
