--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-01  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Translation updated.
+
 2004-06-29  Christian Rose  <menthos@menthos.com>
 
 	* POTFILES.skip: Removed nonexisting files.
