--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-24  Narayana Pattipati  <narayana.pattipati@wipro.com>
+
+	* src/nautilus-window-manage-views.c (determined_initial_view_callback):
+	Make sure host name is present before trying to show it in the
+	error message. Fixes bugzilla bug#144906.
+
 2004-06-25  Sebastien Bacher  <seb128@debian.org>
 
 	* libnautilus-private/nautilus-icon-container.c:
